--- a/frontend/index.html
+++ b/frontend/index.html
@@ -283,7 +283,9 @@
       const refreshToggleEl = document.getElementById("refreshToggle");
 
       // Backend server configuration
-      const BACKEND_URL = "http://localhost:3001"; // Configure this to match your backend server
+      const BACKEND_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1' 
+        ? "http://localhost:3001"  // Local development
+        : "/api";  // Production (Vercel)
 
       function fetchLogs() {
         const xhr = new XMLHttpRequest();
